Add favicon and forest generator

--- a/mountain-range-names/index.html
+++ b/mountain-range-names/index.html
@@ -19,6 +19,7 @@
           </ul>
           <h2 class="heading">Name Generators</h2>
           <ul>
+            <li><a href="../forest-names/index.html" class="">Forest Names</a></li>
             <li><a href="#" class="navActive">Mountain Ranges</a></li>
           </ul>
         </nav>
