--- a/dw-gm-tools/index.html
+++ b/dw-gm-tools/index.html
@@ -20,6 +20,7 @@
           </ul>
           <h2 class="heading">Name Generators</h2>
           <ul>
+            <li><a href="../forest-names/index.html" class="">Forest Names</a></li>
             <li><a href="../mountain-range-names/index.html">Mountain Ranges</a></li>
           </ul>
         </nav>
