--- a/gauntlet-names-generator/index.html
+++ b/gauntlet-names-generator/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Markov Generator</title>
+    <title>Gauntlet Name Generator</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Chela+One|Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
@@ -15,22 +15,38 @@
           <a href="../index.html"><img src="../images/LogoMakr_8CcQfl.png" alt="" id="sidebarLogo"></a>
           <h2 class="heading">Generators by System</h2>
           <ul>
-            <li><a href="#" class="navActive">Dungeon World GM Tools</a></li>
+            <li><a href="../dw-gm-tools/index.html" class="">Dungeon World GM Tools</a></li>
           </ul>
           <h2 class="heading">Name Generators</h2>
           <ul>
+            <li><a href="../forest-names/index.html" class="">Forest Names</a></li>
             <li><a href="../mountain-range-names/index.html">Mountain Ranges</a></li>
           </ul>
         </nav>
       </div>
 
-    <div class="ui container">
-      <button id="clicky">Clicky</button>
-      <ul>
+    <div class="content" id="gauntletNamesContent">
+      <main class="">
+        <h1 class="heading contentHeading" id="gauntletHeading">Gauntlet Patron Name Generator</h1>
+        <div class="" id="shadeBox">
+          <ul id="mountainList" class="genText">
 
-      </ul>
+          </ul>
+          <button class ="btn" id="clicky">Click to Generate Names</button>
+        </div>
+        <div>
+          <a href="../index.html"><img src="../images/LogoMakr_8CcQfl.png" id="homeLogo"></a>
+        </div>
+      </main>
+    </div>
+    <div class="footer">
+      <footer>
+        <a href="https://www.fictivefun.com">@Fictive Fun 2018</a>
+      </footer>
+    </div>
   </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="generator.js"></script>
+    <script type="text/javascript" src="../scripts/script.js"></script>
   </body>
 </html>
