freebooter/eldritch and other updates

--- a/eldritch-names/index.html
+++ b/eldritch-names/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Mountain Range Generator</title>
+    <title>Eldritch Entity Generator</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Chela+One|Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="eldritch.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -19,17 +20,17 @@
           </ul>
           <h2 class="heading">Name Generators</h2>
           <ul>
-            <li><a href="../eldritch-names/index.html" class="">Eldritch Names</a></li>
+            <li><a href="../eldritch-names/index.html" class="navActive">Eldritch Names</a></li>
             <li><a href="../forest-names/index.html" class="">Forest Names</a></li>
-            <li><a href="#" class="navActive">Mountain Ranges</a></li>
+            <li><a href="../mountain-range-names" class="">Mountain Ranges</a></li>
           </ul>
         </nav>
       </div>
 
 
-      <div class="content" id="mountainRangeContent">
+      <div class="content" id="eldritchContent">
         <main class="">
-          <h1 class="heading contentHeading" id="">Mountain Ranges</h1>
+          <h1 class="heading contentHeading" id="eldritchTitle">Eldritch Entity</h1>
           <div class="" id="shadeBox">
             <ul id="mountainList" class="genText">
 
@@ -53,7 +54,7 @@
 
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="generator.js"></script>
+    <script type="text/javascript" src="eldritch.js"></script>
     <script type="text/javascript" src="../scripts/script.js"></script>
   </body>
 </html>
