--- a/forest-names/index.html
+++ b/forest-names/index.html
@@ -19,6 +19,7 @@
           </ul>
           <h2 class="heading">Name Generators</h2>
           <ul>
+            <li><a href="../eldritch-names/index.html" class="">Eldritch Names</a></li>
             <li><a href="#" class="navActive">Forest Names</a></li>
             <li><a href="../mountain-range-names/index.html">Mountain Ranges</a></li>
           </ul>
