--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           </ul>
           <h3 class="heading">Name Generators</h3>
           <ul>
+            <li><a href="eldritch-names/index.html" class="">Eldritch Names</a></li>
             <li><a href="forest-names/index.html" class="">Forest Names</a></li>
             <li><a href="mountain-range-names/index.html">Mountain Ranges</a></li>
           </ul>
@@ -41,6 +42,7 @@
             </ul>
             <ul class="homeLinks">
               <h3 class="heading">Name Generators</h3>
+              <li><a href="eldritch-names/index.html" class="">Eldritch Names</a></li>
               <li><a href="forest-names/index.html" class="">Forest Names</a></li>
               <li><a href="mountain-range-names/index.html">Mountain Ranges</a></li>
             </ul>
