Added background image to freebooters page

--- a/dw-gm-tools/index.html
+++ b/dw-gm-tools/index.html
@@ -17,9 +17,11 @@
           <h2 class="heading">Generators by System</h2>
           <ul>
             <li><a href="#" class="navActive">Dungeon World GM Tools</a></li>
+            <li><a href="../freebooters-character-generator/index.html">Freebooters on the Frontier Character Generator</a></li>
           </ul>
           <h2 class="heading">Name Generators</h2>
           <ul>
+            <li><a href="../eldritch-names/index.html" class="">Eldritch Names</a></li>
             <li><a href="../forest-names/index.html" class="">Forest Names</a></li>
             <li><a href="../mountain-range-names/index.html">Mountain Ranges</a></li>
           </ul>
