--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <ul class="homeLinks">
               <h3 class="heading">Generators by System</h3>
               <li><a href="dw-gm-tools/index.html">Dungeon World Game Master Tools</a></li>
+              <li><a href="freebooters-character-generator/index.html">Freebooters on the Frontier Character Generator</a></li>
+
             </ul>
             <ul class="homeLinks">
               <h3 class="heading">Name Generators</h3>
