--- a/eldritch-names/index.html
+++ b/eldritch-names/index.html
@@ -17,12 +17,13 @@
           <h2 class="heading">Generators by System</h2>
           <ul>
             <li><a href="../dw-gm-tools/index.html" >Dungeon World GM Tools</a></li>
+            <li><a href="../freebooters-character-generator/index.html">Freebooters on the Frontier Character Generator</a></li>
           </ul>
           <h2 class="heading">Name Generators</h2>
           <ul>
             <li><a href="../eldritch-names/index.html" class="navActive">Eldritch Names</a></li>
             <li><a href="../forest-names/index.html" class="">Forest Names</a></li>
-            <li><a href="../mountain-range-names" class="">Mountain Ranges</a></li>
+            <li><a href="../mountain-range-names/index.html" class="">Mountain Ranges</a></li>
           </ul>
         </nav>
       </div>
