--- a/gauntlet-names-generator/index.html
+++ b/gauntlet-names-generator/index.html
@@ -16,6 +16,7 @@
           <h2 class="heading">Generators by System</h2>
           <ul>
             <li><a href="../dw-gm-tools/index.html" class="">Dungeon World GM Tools</a></li>
+            <li><a href="../freebooters-character-generator/index.html">Freebooters on the Frontier Character Generator</a></li>
           </ul>
           <h2 class="heading">Name Generators</h2>
           <ul>
