Added personality generator

--- a/dw-gm-tools/index.html
+++ b/dw-gm-tools/index.html
@@ -25,6 +25,10 @@
             <li><a href="../forest-names/index.html" class="">Forest Names</a></li>
             <li><a href="../mountain-range-names/index.html">Mountain Ranges</a></li>
           </ul>
+          <h2 class="heading">Other Generators</h2>
+          <ul>
+            <li><a href="../movie-personality-mashup/index.html" class="">Personality Mashup</a></li>
+          </ul>
         </nav>
       </div>
 
