--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
           <h3 class="heading">Generators by System</h3>
           <ul>
             <li><a href="dw-gm-tools/index.html">Dungeon World GM Tools</a></li>
+            <li><a href="freebooters-character-generator/index.html">Freebooters on the Frontier Character Generator</a></li>
           </ul>
           <h3 class="heading">Name Generators</h3>
           <ul>
             <li><a href="eldritch-names/index.html" class="">Eldritch Names</a></li>
             <li><a href="forest-names/index.html" class="">Forest Names</a></li>
             <li><a href="mountain-range-names/index.html">Mountain Ranges</a></li>
+          </ul>
+          <h2 class="heading">Other Generators</h2>
+          <ul>
+            <li><a href="movie-personality-mashup/index.html" class="">Personality Mashup</a></li>
           </ul>
         </nav>
       </div>
@@ -40,13 +45,16 @@
               <h3 class="heading">Generators by System</h3>
               <li><a href="dw-gm-tools/index.html">Dungeon World Game Master Tools</a></li>
               <li><a href="freebooters-character-generator/index.html">Freebooters on the Frontier Character Generator</a></li>
-
             </ul>
             <ul class="homeLinks">
               <h3 class="heading">Name Generators</h3>
               <li><a href="eldritch-names/index.html" class="">Eldritch Names</a></li>
               <li><a href="forest-names/index.html" class="">Forest Names</a></li>
               <li><a href="mountain-range-names/index.html">Mountain Ranges</a></li>
+            </ul>
+            <ul class="homeLinks">
+              <h3 class="heading">Other Generators</h3>
+              <li><a href="movie-personality-mashup/index.html" class="">Personality Mashup</a></li>
             </ul>
           </div>
         </main>
