--- a/forest-names/index.html
+++ b/forest-names/index.html
@@ -24,6 +24,10 @@
             <li><a href="#" class="navActive">Forest Names</a></li>
             <li><a href="../mountain-range-names/index.html">Mountain Ranges</a></li>
           </ul>
+          <h2 class="heading">Other Generators</h2>
+          <ul>
+            <li><a href="../movie-personality-mashup/index.html" class="">Personality Mashup</a></li>
+          </ul>
         </nav>
       </div>
 
